# tap-rillet

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  meltano.yml  pyproject.toml  ruff.toml
tap_rillet/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
